issue: add favicon and title.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <title>Hospital</title>
+        <link rel="icon" type="img/x-icon" href="hospital.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<base href="https://blucbo.github.io/timetable/">
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
